# JustSkip

./: .gitignore  CHANGELOG.md  CMakeLists.txt  JustSkip.ini  LICENSE  NEXUS_DESCRIPTION.txt  README.md  README.txt  modinfo.json  release.ps1
source/: JustSkip.cpp
